-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17
-
Component/s: hotspot
-
b14
Several Vector API tests failed intermittently due to this assert.
```
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/jvm/jdk/src/hotspot/share/opto/type.hpp:1686), pid=10561, tid=10577
# assert(_base >= VectorA && _base <= VectorZ) failed: Not a Vector
#
# JRE version: OpenJDK Runtime Environment (17.0) (fastdebug build 17-internal+0-adhoc..jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 17-internal+0-adhoc..jdk, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x918f44] StoreVectorNode::memory_size() const+0xb4
#
Current CompileTask:
C2: 38126 6620 % b Float64VectorLoadStoreTests::loadStoreByteBuffer @ 67 (170 bytes)
Stack: [0x00007f3dcb4fd000,0x00007f3dcb5fe000], sp=0x00007f3dcb5f8640, free space=1005k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x918f44] StoreVectorNode::memory_size() const+0xb4
V [libjvm.so+0x128da73] InitializeNode::can_capture_store(StoreNode*, PhaseGVN*, bool) [clone .part.208]+0x113
V [libjvm.so+0x1296da6] StoreNode::Ideal(PhaseGVN*, bool)+0x506
V [libjvm.so+0x144448a] PhaseIterGVN::transform_old(Node*)+0xba
V [libjvm.so+0x143e56d] PhaseIterGVN::optimize()+0x7d
V [libjvm.so+0x97c142] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x362
V [libjvm.so+0x978cae] Compile::Optimize()+0xc8e
V [libjvm.so+0x97ab24] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1864
V [libjvm.so+0x7e186a] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x10a
V [libjvm.so+0x988e46] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xbf6
V [libjvm.so+0x9899d8] CompileBroker::compiler_thread_loop()+0x4b8
V [libjvm.so+0x17cfd2a] JavaThread::thread_main_inner()+0x2fa
V [libjvm.so+0x17d0047] JavaThread::run()+0x2b7
V [libjvm.so+0x17d4b08] Thread::call_run()+0xf8
V [libjvm.so+0x13c34ce] thread_native_entry(Thread*)+0x10e
```
This can be reproduced by repeatly running the following tests with -ea -esa -Xcomp -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -server -XX:-TieredCompilation -XX:+DeoptimizeALot.
```
jdk/incubator/vector/Float64VectorLoadStoreTests.java
jdk/incubator/vector/Int64VectorLoadStoreTests.java
jdk/incubator/vector/Double128VectorLoadStoreTests.java
jdk/incubator/vector/Short64VectorLoadStoreTests.java
```
```
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/jvm/jdk/src/hotspot/share/opto/type.hpp:1686), pid=10561, tid=10577
# assert(_base >= VectorA && _base <= VectorZ) failed: Not a Vector
#
# JRE version: OpenJDK Runtime Environment (17.0) (fastdebug build 17-internal+0-adhoc..jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 17-internal+0-adhoc..jdk, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x918f44] StoreVectorNode::memory_size() const+0xb4
#
Current CompileTask:
C2: 38126 6620 % b Float64VectorLoadStoreTests::loadStoreByteBuffer @ 67 (170 bytes)
Stack: [0x00007f3dcb4fd000,0x00007f3dcb5fe000], sp=0x00007f3dcb5f8640, free space=1005k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x918f44] StoreVectorNode::memory_size() const+0xb4
V [libjvm.so+0x128da73] InitializeNode::can_capture_store(StoreNode*, PhaseGVN*, bool) [clone .part.208]+0x113
V [libjvm.so+0x1296da6] StoreNode::Ideal(PhaseGVN*, bool)+0x506
V [libjvm.so+0x144448a] PhaseIterGVN::transform_old(Node*)+0xba
V [libjvm.so+0x143e56d] PhaseIterGVN::optimize()+0x7d
V [libjvm.so+0x97c142] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x362
V [libjvm.so+0x978cae] Compile::Optimize()+0xc8e
V [libjvm.so+0x97ab24] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1864
V [libjvm.so+0x7e186a] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x10a
V [libjvm.so+0x988e46] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xbf6
V [libjvm.so+0x9899d8] CompileBroker::compiler_thread_loop()+0x4b8
V [libjvm.so+0x17cfd2a] JavaThread::thread_main_inner()+0x2fa
V [libjvm.so+0x17d0047] JavaThread::run()+0x2b7
V [libjvm.so+0x17d4b08] Thread::call_run()+0xf8
V [libjvm.so+0x13c34ce] thread_native_entry(Thread*)+0x10e
```
This can be reproduced by repeatly running the following tests with -ea -esa -Xcomp -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -server -XX:-TieredCompilation -XX:+DeoptimizeALot.
```
jdk/incubator/vector/Float64VectorLoadStoreTests.java
jdk/incubator/vector/Int64VectorLoadStoreTests.java
jdk/incubator/vector/Double128VectorLoadStoreTests.java
jdk/incubator/vector/Short64VectorLoadStoreTests.java
```